[gd_scene load_steps=12 format=4 uid="uid://cnje44xrphq68"]

[ext_resource type="Texture2D" uid="uid://blb8welxhiiit" path="res://ball.png" id="1_koow7"]
[ext_resource type="Script" path="res://ball.gd" id="1_nb42e"]
[ext_resource type="Texture2D" uid="uid://cgdhatvqixqe5" path="res://PCA_All.png" id="3_pja36"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_d7w83"]
bounce = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_s2ne4"]
radius = 27.6586

[sub_resource type="CircleShape2D" id="CircleShape2D_otodf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f6uxv"]
size = Vector2(1165, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_krygj"]
bg_color = Color(0.0823529, 0.14902, 0.486275, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dkj01"]
texture = ExtResource("3_pja36")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:6/0 = 0
9:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
8:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:7/0 = 0
9:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:8/0 = 0
5:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:9/0 = 0
5:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0

[sub_resource type="TileSet" id="TileSet_v3u15"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_dkj01")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_8y8ag"]
distance = -155.0

[node name="main" type="Node2D"]

[node name="ball" type="RigidBody2D" parent="."]
position = Vector2(556, 456)
physics_material_override = SubResource("PhysicsMaterial_d7w83")
script = ExtResource("1_nb42e")

[node name="CPUParticles2D" type="CPUParticles2D" parent="ball"]
gravity = Vector2(1.73, 980)
scale_amount_min = 5.0
scale_amount_max = 5.0

[node name="Sprite2D" type="Sprite2D" parent="ball"]
texture = ExtResource("1_koow7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
position = Vector2(1, 5)
shape = SubResource("CircleShape2D_s2ne4")

[node name="Area2D" type="Area2D" parent="ball"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball/Area2D"]
position = Vector2(1, 5)
scale = Vector2(2.95112, 2.88795)
shape = SubResource("CircleShape2D_otodf")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(571, 651)
shape = SubResource("RectangleShape2D_f6uxv")

[node name="UI" type="Node" parent="."]

[node name="VelAndHeight" type="Label" parent="UI"]
offset_left = 78.0
offset_top = 65.0
offset_right = 144.0
offset_bottom = 114.0
text = "Velocity: 
Height: "

[node name="AngleSlider" type="HSlider" parent="UI"]
offset_left = 323.0
offset_top = 93.0
offset_right = 500.0
offset_bottom = 109.0

[node name="PowerSlider" type="HSlider" parent="UI"]
offset_left = 622.0
offset_top = 93.0
offset_right = 791.0
offset_bottom = 118.0

[node name="ResetButton" type="Button" parent="UI"]
offset_left = 960.0
offset_top = 66.0
offset_right = 1077.0
offset_bottom = 105.0
theme_override_styles/normal = SubResource("StyleBoxFlat_krygj")
text = "RESET"

[node name="Bounces" type="Label" parent="UI"]
offset_left = 78.0
offset_top = 122.0
offset_right = 148.0
offset_bottom = 145.0
text = "Bounces: 0
"

[node name="Rewards" type="Label" parent="UI"]
offset_left = 79.0
offset_top = 147.0
offset_right = 146.0
offset_bottom = 170.0
text = "Points: "

[node name="Power" type="Label" parent="UI"]
offset_left = 679.0
offset_top = 65.0
offset_right = 746.0
offset_bottom = 88.0
text = "Power: 0"

[node name="Angle" type="Label" parent="UI"]
offset_left = 380.0
offset_top = 66.0
offset_right = 447.0
offset_bottom = 89.0
text = "Angle: 0"

[node name="TileMapLayer" type="TileMapLayer" parent="." groups=["Terrain"]]
scale = Vector2(3.41065, 3.3044)
tile_map_data = PackedByteArray("AAAAAAAAAAAEAAgAAAAAAAEAAAAEAAgAAAAAAAIAAAAEAAgAAAAAAAMAAAAEAAgAAAAAAAQAAAAEAAgAAAAAAAUAAAAEAAgAAAAAAAYAAAAEAAgAAAAAAAcAAAAEAAgAAAAAAAgAAAAEAAgAAAAAAAkAAAAEAAgAAAAAAAoAAAAEAAgAAAAAAAsAAAAEAAgAAAAAAAwAAAAEAAgAAAABAAwAAAAEAAgAAAACAAwAAAAEAAgAAAADAAwAAAAEAAgAAAAEAAwAAAAEAAgAAAAFAAwAAAAEAAgAAAAGAAwAAAAEAAgAAAAHAAwAAAAEAAgAAAAIAAwAAAAEAAgAAAAJAAwAAAAEAAgAAAAKAAwAAAAEAAgAAAALAAwAAAAEAAgAAAAMAAwAAAAEAAgAAAANAAwAAAAEAAgAAAAOAAwAAAAEAAgAAAAPAAwAAAAEAAgAAAAQAAwAAAAEAAgAAAARAAwAAAAEAAgAAAASAAwAAAAEAAgAAAATAAwAAAAEAAgAAAAUAAwAAAAEAAgAAAAUAAAAAAAEAAgAAAAUAAEAAAAEAAgAAAAUAAIAAAAEAAgAAAAUAAMAAAAEAAgAAAAUAAQAAAAEAAgAAAAUAAUAAAAEAAgAAAAUAAYAAAAEAAgAAAAUAAcAAAAEAAgAAAAUAAgAAAAEAAgAAAAUAAkAAAAEAAgAAAAUAAoAAAAEAAgAAAAUAAsAAAAEAAgAAAATAAAAAAAEAAgAAAASAAAAAAAEAAgAAAARAAAAAAAEAAgAAAAQAAAAAAAEAAgAAAAPAAAAAAAEAAgAAAAOAAAAAAAEAAgAAAANAAAAAAAEAAgAAAAMAAAAAAAEAAgAAAALAAAAAAAEAAgAAAAKAAAAAAAEAAgAAAAJAAAAAAAEAAgAAAAIAAAAAAAEAAgAAAAHAAAAAAAEAAgAAAAGAAAAAAAEAAgAAAAFAAAAAAAEAAgAAAAEAAAAAAAEAAgAAAADAAAAAAAEAAgAAAACAAAAAAAEAAgAAAABAAAAAAAEAAgAAAA=")
tile_set = SubResource("TileSet_v3u15")

[node name="RewardLayer" type="TileMapLayer" parent="." groups=["Reward", "Terrain"]]
scale = Vector2(3.41065, 3.3044)
tile_map_data = PackedByteArray("AAAEAAQAAAAEAAYAAAANAAYAAAAEAAYAAAAQAAgAAAAEAAYAAAASAAQAAAAEAAYAAAADAAoAAAAIAAYAAAADAAsAAAAIAAcAAAAEAAoAAAAJAAYAAAAEAAsAAAAJAAcAAAAJAAIAAAAIAAYAAAAJAAMAAAAIAAcAAAAKAAIAAAAJAAYAAAAKAAMAAAAJAAcAAAALAAsAAAAEAAYAAAACAAcAAAAEAAYAAAATAAoAAAAEAAYAAAAPAAIAAAAIAAYAAAAPAAMAAAAIAAcAAAAQAAIAAAAJAAYAAAAQAAMAAAAJAAcAAAAGAAYAAAAIAAYAAAAGAAcAAAAIAAcAAAAHAAYAAAAJAAYAAAAHAAcAAAAJAAcAAAAJAAoAAAAEAAYAAAA=")
tile_set = SubResource("TileSet_v3u15")

[node name="ResetZone" type="Area2D" parent="." groups=["Reset"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResetZone"]
shape = SubResource("WorldBoundaryShape2D_8y8ag")

[connection signal="body_entered" from="ball/Area2D" to="ball" method="_on_area_2d_body_entered"]
[connection signal="value_changed" from="UI/AngleSlider" to="ball" method="_on_angle_slider_value_changed"]
[connection signal="value_changed" from="UI/PowerSlider" to="ball" method="_on_power_slider_value_changed"]
[connection signal="pressed" from="UI/ResetButton" to="ball" method="_on_reset_button_pressed"]
[connection signal="body_entered" from="ResetZone" to="ball" method="_on_reset_zone_body_entered"]
